<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment1">

    <data>
        <variable
            name="viewModel"
            type="com.example.examapplication2.AppViewModel1" />
    </data>

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:background="#CF7DDD"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:gravity="top"
            android:background="#650875">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/appname"
                android:textColor="#fff"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="@string/FirstName"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/edit_FirstName"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={viewModel.newFirstName}"
                android:textColor="@color/black"
                android:minHeight="30dp"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="left">

            <TextView
                android:id="@+id/FamilyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="@string/FamilyName"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/edit_FamilyName"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@={viewModel.newFamilyName}"
                android:textSize="12sp"
                android:minHeight="30dp"
                android:textColor="@color/black"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/materialname"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/subjectName"
                    android:textColorHint="#FAED7F"
                    android:text="@={viewModel.newCourseName}"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/entered_grade"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FAED7F"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/Grade"
                    android:inputType="number"
                    android:text="@={viewModel.newCourseGrade}"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center">
            <Button
                android:id="@+id/addbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:text="@string/ADD"
                android:onClick="@{() -> viewModel.addGrade()}"
                android:shadowColor="@color/black" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/FromDatabase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:text="@{viewModel.gradesString}"
                        android:textColor="#00008B"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="15dp" />

                </LinearLayout>
            </ScrollView>

            <EditText
                android:id="@+id/deleteMaterial"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:textColorHint="#FAED7F"
                android:layout_marginLeft="10dp"
                android:hint="@string/deleteMaterial"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/deleteMaterialbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:onClick="@{() -> viewModel.deleteMaterialByCourseName(deleteMaterial.getText().toString())}"
                    android:text="@string/DeleteMaterial" />

            <Button
                android:id="@+id/deletebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/Delete"
                android:onClick="@{()-> viewModel.deleteAllMaterials()}"
                />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/materialLayout"
            android:orientation="vertical">

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/savebutton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/save"
                android:textSize="21sp"
                />

        </LinearLayout>
    </LinearLayout>
</layout>
