<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CF7DDD"
    tools:context=".fragment2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#650875"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appname"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="#fff"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginTop="70dp">

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/fname"
            android:textSize="23sp"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/edit_fname"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#FAED7F"
           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="left">

        <TextView
            android:id="@+id/faname"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/faname"
            android:textSize="23sp"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/edit_faname"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#FAED7F"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="left">

        <TextView
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/average"
            android:textSize="23sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/edit_average"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#FAED7F"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/comment"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:textColor="#0417B8"
        android:textSize="30sp" />



</LinearLayout>